<resources>
    <string name="app_name">Marvel\'s Superhero Searcher</string>
    <string name="main_title">Busca tu superhéroe</string>
    <string name="nombre_a_buscar">nombre a buscar</string>
    <string name="superhero_name">Nombre</string>
    <string name="superhero_description">Descripción</string>
    <string name="sin_conexion">Sin conexión a Internet</string>
    <string name="links">Links</string>
    <string name="detalle">Detalle</string>
    <string name="comics">Comics</string>
    <string name="wiki">Wiki</string>
    <string name="recursos">Recursos</string>
    <string name="eventos">Eventos</string>
    <string name="name">Ismael González López</string>
</resources>
